fix(tabs): visual bug with overflow
Pad the tabs scrollbar when present and tabs hovered or focused.

--- a/src/renderer/src/features/tabs/Tabs.module.scss
+++ b/src/renderer/src/features/tabs/Tabs.module.scss
@@ -10,8 +10,7 @@
    overflow-x: auto;
 }
 
-.tabs:has(* ~ *):focus,
-.tabs:has(* ~ *):hover {
+.tabsOverflowing.tabsOverflowing {
    padding-bottom: .25em;
 }
 
